<resources>
    <string name="app_name">Mkey Generator</string>
    <string name="mkey_generator">mkey generator</string>
    <string name="device">Device:</string>
    <string name="system_date">System Date:</string>
    <string name="additional_data">Additional Data:</string>
    <string name="inquiry_number">Inquiry Number:</string>
    <string name="your_master_key_is">Your Master Key is:</string>
    <string name="optional">Optional (for Switch v8.0.0+)</string>
    <string name="generate_key">Generate Key</string>
    <string name="waiting_for_input">Waiting for input…</string>
    <string name="select_date">Select Date</string>
    <string name="splashtext">that is actually usable on mobile lol</string>
    <string name="current_date_label">Current Date: %1$s</string>
    <string name="selected_date_label">Selected Date: %1$s</string>
    <string name="generating">Generating…</string>
    <string name="error_no_internet">Error: No Internet connection</string>
    <string name="error_no_network">Error: Network request failed</string>
    <string name="failed_key">Failed to find master key</string>
    <string name="error_server">Error: Server returned %d</string>
</resources>